--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107224691-1"></script>
 
-    <title>Qi Zhao - Evolutionary Algorithm</title>
+    <title>Qi Zhao</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,14 +45,14 @@
             <div class="col-sm-10">
                 <p>                    
                     I am a Research Assistant Professor at the Department of Computer Science and Engineering, Southern
-                    University of Science and Technology (SUSTech), China since 2021. Prior to that, I was a Post-Doctoral Fellow of Computer Science and Technology at SUSTech during 2019 and 2021.(PI: Prof. <a href="https://faculty.sustech.edu.cn/shiyh/en/" target="_blank"
-                    rel="nofollow">Yuhui Shi</a>)
+                    University of Science and Technology (SUSTech), China since 2021. Prior to that, I was a Post-Doctoral Fellow of Computer Science and Technology at SUSTech during 2019 and 2021(PI: Prof. <a href="https://faculty.sustech.edu.cn/shiyh/en/" target="_blank"
+                    rel="nofollow">Yuhui Shi</a>).
                 </p>
         
                 <p>
                     I obtained a Ph.D. degree in Management Science and Engineering from Beijing University of Technology, China in 2019 and was a Joint Ph.D. student in Computer Science at University of New South Wales, Australia from 2017 to 2018 (Supervisor:
                     Prof. <a href="https://research.unsw.edu.au/people/professor-ruhul-sarker" target="_blank" rel="nofollow">Ruhul
-                        Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>)
+                        Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
                 </p>
         
                 <p>
@@ -63,7 +63,7 @@
                 </p>
 
                 <p>
-                    Some of my research findings have been successfully applied in industry. For example, for supply chain management of manufacturing company, our techniques are improving the efficiency of row material stacking, saving spaces for rack placement, and automatically configuring solvers for dynamic changes. </br>
+                    Some of my research findings have been successfully applied in industry. For example, for the supply chain management of a manufacturing company, our techniques are improving the efficiency of row material stacking, saving spaces for rack placement, and automatically configuring solvers for dynamic changes. </br>
                 </p>
             </div>
         </div>
