--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
             
             <div class="col-sm-10">
                 <p> 
-                    <br/><br/>
-                    <a font style="font-size: 20px"> Qi Zhao </a> 
-                    <br/><br/>
-                    <a font style="font-size: 16px"> zhaoq@sustech.edu.cn </a>
+                    <br/>
+                    <font style="font-size:24px">Qi Zhao</font>
+                    <br/>
+                    Department of Computer Science and Engineering
+                    <br/>
+                    Southern University of Science and Technology
+                    <br/>
+                    Shenzhen 518055, China
+                    <br/>
+                    Email: zhaoq@sustech.edu.cn
                 </p>             
             </div>
         </div>
@@ -139,7 +145,7 @@
                     <i> Information Sciences</i>, 2018, 462: 141-159.
                     <br/><br/>
 
-                    Full list of papers please refer to <a
+                    Full list of my papers please refer to <a
                     href="https://scholar.google.com/citations?user=myZogi0AAAAJ&hl=en" target="_blank"
                     rel="nofollow"> Google Scholar</a>.
                 </p>
