--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </p>
 
                 <p>
-                    Some of my research findings have been successfully applied in industry. For example, for the supply chain management of a manufacturing company, our techniques are improving the efficiency of row material stacking, saving spaces for rack placement, and automatically configuring solvers for dynamic changes. </br>
+                    Some of my research findings have been successfully applied in industry. For example, for the supply chain management of a manufacturing company, our techniques are improving the efficiency of row material stacking, saving spaces for rack placement, and automatically configuring solvers for demand changes. </br>
                 </p>
             </div>
         </div>
