--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </p>
 
                 <p>
-                    I obtained a Ph.D. degree in Management Science and Engineering from Beijing University of
-                    Technology, China in 2019 and was a Joint Ph.D. student in Computer Science at University of New
-                    South Wales, Australia from 2017 to 2018 (Supervisor:
+                    I obtained a PhD degree in Management Science and Engineering from Beijing University of
+                    Technology, China in 2019 and was a Joint PhD student in Computer Science at the University of New
+                    South Wales Canberra at ADFA, Australia from 2017 to 2018 (Supervisor:
                     Prof. <a href="https://research.unsw.edu.au/people/professor-ruhul-sarker" target="_blank"
                         rel="nofollow">Ruhul
                         Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
@@ -74,7 +74,7 @@
 
                 <p>
                     Some of my research findings have been successfully applied in industry. For example, for the supply
-                    chain management of a manufacturing company, our techniques are improving the efficiency of row
+                    chain management of a manufacturing company, our techniques are improving the efficiency of raw
                     material stacking, saving spaces for rack placement, and automatically configuring solvers for
                     demand changes. </br>
                 </p>
