--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
                 <p>
                     Some of my research findings have been successfully applied in industry. For example, for the supply
-                    chain management of a manufacturing company, our techniques are improving the efficiency of raw
+                    chain management of a manufacturing company, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
+                    rel="nofollow">AutoOpt</a> technique is improving the efficiency of raw
                     material stacking, saving spaces for rack placement, and automatically configuring solvers for
                     demand changes. </br>
                 </p>
@@ -93,7 +94,8 @@
                         problems
                     </b> </br>
                     <b> Zhao Q</b>, Yan B, and Shi Y* </br>
-                    <i> arXiv Preprint</i>, 2022, https://arxiv.org/abs/2204.00998.
+                    <i> arXiv Preprint</i>, 2022, <a href="https://arxiv.org/abs/2204.00998" target="_blank"
+                    rel="nofollow">https://arxiv.org/abs/2204.00998</a>.
                 </p>
 
                 <p>
