--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     South Wales Canberra at ADFA, Australia from 2017 to 2018 (Supervisor:
                     Prof. <a href="https://research.unsw.edu.au/people/professor-ruhul-sarker" target="_blank"
                         rel="nofollow">Ruhul
-                        Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
+                        Sarker</a>). Here is my <a href="cv.pdf" target="_blank" rel="nofollow">CV</a>.
                 </p>
 
                 <p>
