--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
                 <p>
                     Some of my research findings have been successfully applied in industry. For example, for the supply
-                    chain management of a manufacturing company, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
-                    rel="nofollow">AutoOpt</a> technique is improving the efficiency of raw
-                    material stacking, saving spaces for rack placement, and automatically configuring solvers for
+                    chain management of a leading biomedical electronics company, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
+                    rel="nofollow">AutoOpt</a> technique has been verified to be able to significantly improve the efficiency of raw
+                    material stacking, save spaces for rack placement, and automatically configure solvers for
                     demand changes. </br>
                 </p>
             </div>
