--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 
             <div class="col-sm-10">
                 <p>
-                    I am a Research Assistant Professor at the Department of Computer Science and Engineering, Southern
+                    I am a Research Assistant Professor with the Department of Computer Science and Engineering, Southern
                     University of Science and Technology (SUSTech), China since 2021. Prior to that, I was a
-                    Post-Doctoral Fellow of Computer Science and Technology at SUSTech during 2019 and 2021(PI: Prof. <a
+                    Postdoctoral Fellow of Computer Science and Technology with SUSTech during 2019 and 2021(PI: Prof. <a
                         href="https://faculty.sustech.edu.cn/shiyh/en/" target="_blank" rel="nofollow">Yuhui Shi</a>).
                 </p>
 
                 <p>
-                    I obtained a PhD degree in Management Science and Engineering from Beijing University of
-                    Technology, China in 2019 and was a Joint PhD student in Computer Science at the University of New
+                    I obtained the PhD degree in Management Science and Engineering from Beijing University of
+                    Technology, China in 2019 and was a Joint PhD student in Computer Science with the University of New
                     South Wales Canberra at ADFA, Australia from 2017 to 2018 (Supervisor:
                     Prof. <a href="https://research.unsw.edu.au/people/professor-ruhul-sarker" target="_blank"
                         rel="nofollow">Ruhul
-                        Sarker</a>). Here is my <a href="cv.pdf" target="_blank" rel="nofollow">CV</a>.
+                        Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
                 </p>
 
                 <p>
@@ -102,7 +102,7 @@
                     <b> Evolutionary robust clustering over time for temporal data
                     </b> </br>
                     <b> Zhao Q</b>, Yan B, Yang J, and Shi Y* </br>
-                    <i> IEEE Transactions on Cybernetics</i>, 2022, Accepted.
+                    <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3167711.
                 </p>
 
                 <p>
@@ -116,7 +116,7 @@
                     <b> Evolutionary dynamic multi-objective optimization via learning from historical search process
                     </b> </br>
                     <b> Zhao Q</b>, Yan B, Shi Y*, and Middendorf M </br>
-                    <i> IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3059252.
+                    <i> IEEE Transactions on Cybernetics</i>, 2021, early access, doi: 10.1109/TCYB.2021.3059252.
                 </p>
 
                 <p>
@@ -194,7 +194,7 @@
 
 
         <div class="footer">
-            Last update: 13/04/2022
+            Last update: 20/04/2022
         </div>
     </div>
     </br></br>
