--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                     Technology, China in 2019 and was a Joint PhD student in Computer Science with the University of New
                     South Wales Canberra at ADFA, Australia from 2017 to 2018 (Supervisor:
                     Prof. <a href="https://research.unsw.edu.au/people/professor-ruhul-sarker" target="_blank"
-                        rel="nofollow">Ruhul
-                        Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
+                        rel="nofollow">Ruhul Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
                 </p>
 
                 <p>
@@ -75,8 +74,8 @@
                 <p>
                     Some of my research findings have been successfully applied in industry. For example, for the supply
                     chain management of a leading biomedical electronics company, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
-                    rel="nofollow">AutoOpt</a> technique has been verified to be able to significantly improve the efficiency of raw
-                    material stacking, save spaces for rack placement, and automatically configure solvers for
+                    rel="nofollow">AutoOpt</a> technique has been verified to significantly improve the efficiency of raw
+                    material stacking, save space for rack placement, and automatically configure solvers for
                     demand changes. </br>
                 </p>
             </div>
