--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     Some of my research findings have been successfully applied in industry. For example, for the supply
                     chain management of a leading biomedical electronics company, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
                     rel="nofollow">AutoOpt</a> technique has been verified to significantly improve the efficiency of raw
-                    material stacking, save space for rack placement, and automatically configure solvers for
+                    material stacking, save space for rack placement, and automatically design solvers for
                     demand changes. </br>
                 </p>
             </div>
@@ -144,7 +144,7 @@
                     <b> Novel evolutionary multi-objective soft subspace clustering algorithm for credit risk assessment
                     </b> </br>
                     Liu C, Xie J*, <b>Zhao Q</b>, and Liu C </br>
-                    <i> Expert Systems with Applications</i>, 2019(138): 112827.
+                    <i> Expert Systems with Applications</i>, 2019, 138: 112827.
                 </p>
 
                 <p>
