--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
         <hr />
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-2">
                 <h5>Academic Activities</h5>
             </div>
@@ -189,7 +189,7 @@
                 </p>
             </div>
         </div>
-        <hr />
+        <hr /> -->
 
 
         <div class="footer">
