--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
                 <p>
                     Some of my research findings have been successfully applied in industry. For example, for the supply
-                    chain management of a leading biomedical electronics company, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
+                    chain management of a leading biomedical electronics company <a href="https://www.mindray.com/en/" target="_blank"
+                    rel="nofollow">Mindray</a>, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
                     rel="nofollow">AutoOpt</a> technique has been verified to significantly improve the efficiency of raw
                     material stacking, save space for rack placement, and automatically design solvers for
                     demand changes. </br>
