--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
             <div class="col-sm-10">
                 <p>
-                    <br />
                     <font style="font-size:24px">Qi Zhao</font>
+                    <br />
+                    Research Assistant Professor
                     <br />
                     Department of Computer Science and Engineering
                     <br />
@@ -50,10 +51,11 @@
 
             <div class="col-sm-10">
                 <p>
-                    I am a Research Assistant Professor with the Department of Computer Science and Engineering, Southern
+                    I am a Research Assistant Professor with the Department of Computer Science and Engineering,
+                    Southern
                     University of Science and Technology (SUSTech), China since 2021. Prior to that, I was a
-                    Postdoctoral Fellow of Computer Science and Technology with SUSTech during 2019 and 2021(PI: Prof. <a
-                        href="https://faculty.sustech.edu.cn/shiyh/en/" target="_blank" rel="nofollow">Yuhui Shi</a>).
+                    Postdoctoral Fellow of Computer Science and Technology with SUSTech during 2019 and 2021(PI: Prof.
+                    <a href="https://faculty.sustech.edu.cn/shiyh/en/" target="_blank" rel="nofollow">Yuhui Shi</a>).
                 </p>
 
                 <p>
@@ -61,23 +63,8 @@
                     Technology, China in 2019 and was a Joint PhD student in Computer Science with the University of New
                     South Wales Canberra at ADFA, Australia from 2017 to 2018 (Supervisor:
                     Prof. <a href="https://research.unsw.edu.au/people/professor-ruhul-sarker" target="_blank"
-                        rel="nofollow">Ruhul Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank" rel="nofollow">CV</a>.
-                </p>
-
-                <p>
-                    My research interests include: </br>
-                    &emsp;&emsp; Evolutionary Computation and Optimization </br>
-                    &emsp;&emsp; Automated Algorithm Design </br>
-                    &emsp;&emsp; Operations Research
-                </p>
-
-                <p>
-                    Some of my research findings have been successfully applied in industry. For example, for the supply
-                    chain management of a leading biomedical electronics company <a href="https://www.mindray.com/en/" target="_blank"
-                    rel="nofollow">Mindray</a>, our <a href="https://arxiv.org/abs/2204.00998" target="_blank"
-                    rel="nofollow">AutoOpt</a> technique has been verified to significantly improve the efficiency of raw
-                    material stacking, save space for rack placement, and automatically design solvers for
-                    demand changes. </br>
+                        rel="nofollow">Ruhul Sarker</a>). Here is my <a href="img/cv.pdf" target="_blank"
+                        rel="nofollow">CV</a>.
                 </p>
             </div>
         </div>
@@ -85,7 +72,37 @@
 
         <div class="row">
             <div class="col-sm-2">
-                <h5>Selected Papers</h5>
+                <h5>Research</h5>
+            </div>
+
+            <div class="col-sm-10">
+                <p>
+                    My research interests include: </br>
+                    &emsp;&emsp;<b>Metaheuristics and Operations Research</b>: Developing metaheuristics and operations research methods to solve scientific problems
+                    (e.g., data clustering, multi-objective optimization, sparse optimization) and practical problems
+                    (e.g., bin packing, deployment, scheduling, route planning).</br>
+                    &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for automated algorithm design, including
+                    automated one-off design, continual design, and supervised design. Currently focusing on
+                    automatically designing metaheuristics for optimization.</br>
+                </p>
+
+                <p>
+                    Some of my research have been successfully applied in industry. For example, for the supply
+                    chain management of a leading biomedical electronics company <a href="https://www.mindray.com/en/"
+                        target="_blank" rel="nofollow">Mindray</a>, our <a href="https://arxiv.org/abs/2204.00998"
+                        target="_blank" rel="nofollow">AutoOpt</a> technique has been verified to significantly improve
+                    the efficiency of raw
+                    material stacking, save space for rack placement, and automatically design solvers for
+                    demand changes. </br>
+                </p>
+            </div>
+        </div>
+        <hr />
+
+
+        <div class="row">
+            <div class="col-sm-2">
+                <h5>Featured Papers</h5>
             </div>
 
             <div class="col-sm-10">
@@ -94,8 +111,7 @@
                         problems
                     </b> </br>
                     <b> Zhao Q</b>, Yan B, and Shi Y* </br>
-                    <i> arXiv Preprint</i>, 2022, <a href="https://arxiv.org/abs/2204.00998" target="_blank"
-                    rel="nofollow">https://arxiv.org/abs/2204.00998</a>.
+                    <i> arXiv Preprint</i>, 2022, https://arxiv.org/abs/2204.00998.
                 </p>
 
                 <p>
