--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 
             <div class="col-sm-10">
                 <p>
+                    <b> Gridless Evolutionary Approach for Line Spectral Estimation with Unknown Model Order
+                    </b> </br>
+                    Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
+                    <i> IEEE Transactions on Cybernetics</i>, 2022, accepted.
+                </p>
+                
+                <p>
                     <b> AutoOpt: A methodological framework of automatically designing metaheuristics for optimization
                         problems
                     </b> </br>
@@ -210,7 +217,7 @@
 
 
         <div class="footer">
-            Last update: 20/04/2022
+            Last update: 27/05/2022
         </div>
     </div>
     </br></br>
