--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     My research interests include: </br>
                     &emsp;&emsp;<b>Metaheuristics and Operations Research</b>: Developing metaheuristics and operations research methods to solve scientific problems
                     (e.g., data clustering, multi-objective optimization, sparse optimization) and practical problems
-                    (e.g., bin packing, deployment, scheduling, route planning).</br>
+                    (e.g., bin packing, deployment, scheduling).</br>
                     &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for automated algorithm design, including
                     automated one-off design, continual design, and supervised design. Currently focusing on
                     automatically designing metaheuristics for optimization.</br>
@@ -107,7 +107,7 @@
 
             <div class="col-sm-10">
                 <p>
-                    <b> Gridless Evolutionary Approach for Line Spectral Estimation with Unknown Model Order
+                    <b> Gridless evolutionary approach for line spectral estimation with unknown model order
                     </b> </br>
                     Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
                     <i> IEEE Transactions on Cybernetics</i>, 2022, accepted.
