--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <b> Gridless evolutionary approach for line spectral estimation with unknown model order
                     </b> </br>
                     Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
-                    <i> IEEE Transactions on Cybernetics</i>, 2022, accepted.
+                    <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3179378.
                 </p>
                 
                 <p>
