--- a/index.html
+++ b/index.html
@@ -78,16 +78,17 @@
             <div class="col-sm-10">
                 <p>
                     My research interests include: </br>
-                    &emsp;&emsp;<b>Metaheuristics and Operations Research</b>: Developing metaheuristics and operations research methods to solve scientific problems
+                    &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for for
+                    autonomous one-off systems and life-long systems. Currently focusing on automatically designing
+                    heuristics/metaheuristics for optimization problems in autonomous systems.</br>
+                    &emsp;&emsp;<b>Metaheuristics and Operations Research</b>: Developing metaheuristics and operations
+                    research methods to solve scientific problems
                     (e.g., data clustering, multi-objective optimization, sparse optimization) and practical problems
                     (e.g., bin packing, deployment, scheduling).</br>
-                    &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for automated algorithm design, including
-                    automated one-off design, continual design, and supervised design. Currently focusing on
-                    automatically designing metaheuristics for optimization.</br>
                 </p>
 
                 <p>
-                    Some of my research have been successfully applied in industry. For example, for the supply
+                    Some of my research findings have been successfully applied in industry. For example, for the supply
                     chain management of a leading biomedical electronics company <a href="https://www.mindray.com/en/"
                         target="_blank" rel="nofollow">Mindray</a>, our <a href="https://arxiv.org/abs/2204.00998"
                         target="_blank" rel="nofollow">AutoOpt</a> technique has been verified to significantly improve
@@ -112,7 +113,7 @@
                     Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
                     <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3179378.
                 </p>
-                
+
                 <p>
                     <b> AutoOpt: A methodological framework of automatically designing metaheuristics for optimization
                         problems
