--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p>
                     My research interests include: </br>
                     &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for for
-                    autonomous one-off systems and life-long systems. Currently focusing on automatically designing
+                    one-off systems and autonomous life-long systems. Currently focusing on automatically designing
                     heuristics/metaheuristics for optimization problems in autonomous systems.</br>
                     &emsp;&emsp;<b>Metaheuristics and Operations Research</b>: Developing metaheuristics and operations
                     research methods to solve scientific problems
