--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="col-sm-10">
                 <p>
                     My research interests include: </br>
-                    &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for for
-                    one-off systems and autonomous life-long systems. Currently focusing on automatically designing
-                    heuristics/metaheuristics for optimization problems in autonomous systems.</br>
+                    &emsp;&emsp;<b>Automated Algorithm Design</b>: Developing methods, techniques, and software for
+                    automated algorithm design for one-off systems and autonomous life-long systems. Currently focusing
+                    on automatically designing heuristics/metaheuristics for optimization problems in autonomous systems.</br>
                     &emsp;&emsp;<b>Metaheuristics and Operations Research</b>: Developing metaheuristics and operations
                     research methods to solve scientific problems
                     (e.g., data clustering, multi-objective optimization, sparse optimization) and practical problems
