--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <b> Gridless evolutionary approach for line spectral estimation with unknown model order
                     </b> </br>
                     Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
-                    <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3179378.
+                    <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3179378. (SCI, IF=19.118)
                 </p>
 
                 <p>
@@ -126,28 +126,28 @@
                     <b> Evolutionary robust clustering over time for temporal data
                     </b> </br>
                     <b> Zhao Q</b>, Yan B, Yang J, and Shi Y* </br>
-                    <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3167711.
-                </p>
-
-                <p>
-                    <b> Bilevel evolutionary approach for off-grid direction-of-arrival estimation
-                    </b> </br>
-                    Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
-                    <i> Applied Soft Computing</i>, 2021, 113: 107954.
+                    <i> IEEE Transactions on Cybernetics</i>, 2022, early access, doi: 10.1109/TCYB.2022.3167711. (SCI, IF=19.118)
                 </p>
 
                 <p>
                     <b> Evolutionary dynamic multi-objective optimization via learning from historical search process
                     </b> </br>
                     <b> Zhao Q</b>, Yan B, Shi Y*, and Middendorf M </br>
-                    <i> IEEE Transactions on Cybernetics</i>, 2021, early access, doi: 10.1109/TCYB.2021.3059252.
+                    <i> IEEE Transactions on Cybernetics</i>, 2022, 52(7): 6119-6130. (SCI, IF=19.118)
+                </p>
+
+                <p>
+                    <b> Bilevel evolutionary approach for off-grid direction-of-arrival estimation
+                    </b> </br>
+                    Yan B, <b>Zhao Q</b>, Zhang J*, Zhang J A, and Yao X </br>
+                    <i> Applied Soft Computing</i>, 2021, 113: 107954. (SCI, IF=8.263)
                 </p>
 
                 <p>
                     <b> Adaptive sorting-based evolutionary algorithm for many-objective optimization
                     </b> </br>
                     Liu C, <b>Zhao Q*</b>, Yan B, Elsayed S, Ray T, and Sarker R </br>
-                    <i> IEEE Transactions on Evolutionary Computation</i>, 2019, 23(2): 247-257.
+                    <i> IEEE Transactions on Evolutionary Computation</i>, 2019, 23(2): 247-257. (SCI, IF=16.497)
                 </p>
 
                 <p>
@@ -155,28 +155,28 @@
                         for high-dimensional data
                     </b> </br>
                     Liu C, <b>Zhao Q*</b>, Yan B, Elsayed S, and Sarker R </br>
-                    <i> Information Sciences</i>, 2019, 505: 440-456.
+                    <i> Information Sciences</i>, 2019, 505: 440-456. (SCI, IF=8.233)
                 </p>
 
                 <p>
                     <b> Reference vector-based multi-objective clustering for high-dimensional data
                     </b> </br>
                     Liu C, Li Y*, <b>Zhao Q</b>, and Liu C </br>
-                    <i> Applied Soft Computing</i>, 2019, 78: 614-629.
+                    <i> Applied Soft Computing</i>, 2019, 78: 614-629. (SCI, IF=8.263)
                 </p>
 
                 <p>
                     <b> Novel evolutionary multi-objective soft subspace clustering algorithm for credit risk assessment
                     </b> </br>
                     Liu C, Xie J*, <b>Zhao Q</b>, and Liu C </br>
-                    <i> Expert Systems with Applications</i>, 2019, 138: 112827.
+                    <i> Expert Systems with Applications</i>, 2019, 138: 112827. (SCI, IF=8.665)
                 </p>
 
                 <p>
                     <b> Adaptive decomposition-based evolutionary approach for multiobjective sparse reconstruction
                     </b> </br>
                     Yan B*, <b>Zhao Q</b>, Wang Z, and Zhang J A </br>
-                    <i> Information Sciences</i>, 2018, 462: 141-159.
+                    <i> Information Sciences</i>, 2018, 462: 141-159. (SCI, IF=8.233)
                     <br /><br />
 
                     Full list of my papers please refer to <a
